# model-checker

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  ModelCheck.pfx  PRIVACY.md  README.md  build.txt  build2.txt  build_errors.txt  build_errors_utf8.txt  build_log.txt  check.txt  package-lock.json  tailwind.css
.github/: dependabot.yml
ai-core/: Cargo.toml  build.rs
ai-core/src/: ai.rs  lib.rs  local.rs
ai-core/src/providers/: auth.rs  chatgpt.rs  gemini.rs  mod.rs  phi.rs  qwen.rs
assets/: tailwind.css
models-optimization/: requirements.txt
models-optimization/gemma4/cpu/: mlas.json
models-optimization/phi4/cpu/: mlas.json
models-optimization/qwen/cpu/: mlas.json
src/: benchmarking.rs  chat.rs  layout.rs  main.rs  message.rs  neural_engines.rs  orchestrator.rs  package.rs
stitch_screens/: comparative_analysis.html  model_settings.html  multi_model_chat.html
