[package]
name = "ai-core"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "json"] }
oauth2 = { version = "5.0", default-features = false }
oauth2-reqwest = "0.1.0-alpha.3"
webbrowser = { version = "1.2.0", features = ["hardened"] }
axum = "0.8.8"
tokio = { version = "1", features = ["net"] }
async-trait = "0.1"
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
time = "0.3"
anyhow.workspace = true
serde = "1.0"
serde_json = "1.0"

[build-dependencies]
dotenvy = "0.15"
