[package]
name = "ai-core"
version = "1.0.1"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "json", "stream"] }
oauth2 = { version = "5.0", default-features = false }
oauth2-reqwest = "0.1.0-alpha.3"
webbrowser = { version = "1.2.0", features = ["hardened"] }
axum = "0.8.8"
tokio = { version = "1", features = ["net", "fs"] }
async-trait = "0.1"
futures-util = "0.3"
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
time = "0.3"
anyhow.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ort = { version = "2.0.0-rc.12", features = ["half"] }
tokenizers = "0.22.2"
ndarray = "0.17.2"
half = "2.7"
directories = "6.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = ["Storage", "Storage_Search"]
optional = true

[features]
msix = ["dep:windows"]

[build-dependencies]
dotenvy = "0.15"
